--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "outDir": "./dist",
+        "rootDir": "./src",
         "alwaysStrict": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
@@ -19,7 +20,5 @@
         "strict": true,
         "target": "esnext",
         "allowSyntheticDefaultImports": true
-    },
-    "exclude": ["node_modules", "dist"],
-    "include": ["src/**/*.ts"],
+    }
 }
