--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "themeizer-cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "CLI for themeizer",
   "main": "./dist/index.js",
   "bin": "./dist/index.js",
@@ -28,6 +28,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "arg": "5.0.1",
     "glob": "7.2.0",
     "themeizer": "0.1.0"
   },
