--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "themeizer-cli",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "CLI for themeizer",
   "main": "./dist/index.js",
   "bin": "./dist/index.js",
   "devDependencies": {
     "@types/glob": "7.2.0",
+    "@types/jest": "27.0.3",
     "@types/node": "14.14.21",
     "@typescript-eslint/eslint-plugin": "4.32.0",
     "@typescript-eslint/parser": "4.32.0",
@@ -15,6 +16,8 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.1.1",
     "husky": "7.0.2",
+    "jest": "27.4.5",
+    "ts-jest": "27.1.2",
     "ts-node": "9.1.1",
     "typescript": "4.4.4"
   },
@@ -24,6 +27,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc --build",
+    "test": "jest",
     "lint": "eslint ./**/*.ts"
   },
   "license": "MIT",
